# newrelic-python-agent-graphene-issue

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .safety-policy.yml  .sops.yaml  CODEOWNERS  Dockerfile  Makefile  README.md  VERSION  benchmark.sh  docker-compose.ci.yml  docker-compose.override.yml  docker-compose.yml  env-template  hypercorn_conf.py  main.py  makefile  pyproject.toml  query.json  requirements.txt  setup.cfg  setup.py  whitelist.txt
.github/: bugfix_pr_template.md  feature_pr_template.md
.github/workflows/: docker-build-and-push.yml  main-docker-build-and-push.yml  non-main-quality-check.yaml  quality-check.yaml  reproduction.yml  test.yaml
backend/: Dockerfile  main.py  newrelic.ini  pyproject.toml
backend/app/: factory.py
backend/app/core/: config.py
backend/app/graphql/: query.py
config/: local.example.yaml
deployments/clusters/base/: kustomization.yaml  manifest.yaml
deployments/clusters/griffin/: ksops-secret-generator.yaml  kustomization.yaml  manifest.yaml  patch-add-env-configs-to-api-deployment.yaml  patch-add-external-dns-annotation-to-webservice.yaml  patch-add-host-to-ingress-rules.yaml  secret-hello-full-stack-new-relic-license-key.yaml
hello_full_stack/: entry.py
hello_full_stack/api/: __init__.py  app_router.py  nm_router.py
hello_full_stack/app/: __init__.py  app.py  app_mode.py  bootloader.py
hello_full_stack/app/config/: config.py
hello_full_stack/app/containers/: root_container.py
hello_full_stack/app/initializers/: __init__.py  abstract_initializer.py  api_initializer.py  container_initializer.py  logger_initializer.py  newrelic_initializer.py
hello_full_stack/entry_points/api/: hypercorn_config.py
hello_full_stack_test/: conftest.py
hello_full_stack_test/app/config/: config_test.py
src/: entry.py  uwsgi.yaml
src/hello_full_stack/: entry.py
src/hello_full_stack/api/: __init__.py
src/hello_full_stack/app/: __init__.py  app.py  bootloader.py
src/hello_full_stack/app/config/: config.py
src/hello_full_stack/app/containers/: __init__.py
src/hello_full_stack/app/initializers/: __init__.py  api_initializer.py  config_initializer.py  container_initializer.py
src/hello_full_stack/entry_points/api/: webserver.py
test/hello_full_stack/: dummy_test.py
test/hello_full_stack/app/config/: config_test.py
test/test_helpers/: locks.py
test_proj/: entry.py
test_proj/api/: __init__.py  graphql_router.py  health_check_router.py
test_proj/app/: app.py  bootloader.py
test_proj/app/config/: config.py
test_proj/app/containers/: root_container.py
test_proj/app/initializers/: __init__.py  abstract_initializer.py  api_initializer.py  container_initializer.py  newrelic_initializer.py
test_proj/entry_points/api/: webserver.py
(+1 files in other folders)
