[tool.poetry]
name = "sample-project-backend"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
graphene = "3.2.2"
graphql-core = ">=3.1,<3.3"
newrelic = "8.8.0"
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.3.0"
ipython = "^8.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.cruft]
skip = [".env"]

[tool.pytest.ini_options]
asyncio_mode = 'auto'
