[tool.poetry]
name = "sample-project-backend"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
pydantic = "^1.10.7"
requests = "^2.28.2"
gunicorn = "^20.1.0"
starlette-graphene3 = "0.6.0"
graphene = "3.2.2"
websockets = "11.0.1"
newrelic = "8.8.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.3.0"
ipython = "^8.12.0"
pytest-cov = "^4.0.0"
httpx = "^0.23.3"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.cruft]
skip = [".env"]

[tool.pytest.ini_options]
asyncio_mode = 'auto'
